# working_with_data

./: .gitignore  README.md
data_lake/: README.md  build_schema_lake.py  compare_query_times.py  docker-compose.yaml  generate_and_upload.py  query_lake.py  requirments.txt
databases/: README.md  clickhouse_demo.py  docker-compose.yml  influxdb_demo.py  posgres_demo.py  redis_demo.py
elastic_and_kibana/: README.md  chat_summery.md  docker-compose.yml  filebeat.yml  log_generator.py
grafana_and_flux/: README.md  dashborad.json  docker-compose.yml  drone_altitude.csv  drone_demo_orange_project.ows  drone_generator.py  export_to_csv.py  offline_query.py  requirments.txt
insights/: analyse_titanic.py  titanic_llm_insights.py
orm/: compare_perf.py  docker-compose.yml  generate_data.py  models.py  orm_query.py  orm_to_dataframes_compare.py  raw_sql_query.py
pandas_an_polars_issues/: json_data_types_handeling.py  pandas_iterate_rows.py  polars_eager_operations.py  polars_titanic.py  requirements.txt
store_and_read_data/: CMakeLists.txt  README.md  drone.json  drone.pb  drone.pb.h  drone.proto  drone_pb2.py  read_bin.py  read_json.py  read_proto.py  write_bin.cpp  write_json.cpp  write_proto.cpp
strange_data_types/: README.md  load_data.py  query_data.py  requirements.txt
